# NerdMatrix

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  mat.h  mat_io.h  mat_op.h  mat_rand.h
src/NerdMatrix/: factory.h  matrix.cc  matrix.h
src/NerdMatrix/except/: nerdmatrix_exception.h  nerdmatrix_illegal_ops.h  nerdmatrix_io_exception.h
src/NerdMatrix/ops/: add.h  concat.h  div.h  io.cc  io.h  matmul.h  mul.h  sub.h
src/NerdMatrix/wrapper/: blas_wrapper.cc  blas_wrapper.h
test/: CMakeLists.txt  common.cpp  common.h  mattest1.cpp  mattest2.cpp  mattest3.cpp  mattest4.cpp  mattest5.cpp  mattest6.cpp  mattestnn.cpp  mattestnn2.cpp  test_nerdmatrix.cc  test_nerdmatrix_concat.cc  test_nerdmatrix_elementwise_ops.cc  test_nerdmatrix_factory.cc  test_nerdmatrix_matmul.cc
test/benchmark/: benchmark_element_wise_ops.cc  benchmark_matmul.cc  benchmark_nerdmatrix.cc
